hphp/test/zend/good/Zend/tests/errmsg_031.php.expectf

Fatal error: A type specifier is expected here. in %s/errmsg_031.php on line 3
